syntax = "proto3";

message Marker {
  int32 x = 1;
  int32 y = 2;
  int32 id = 3;
  string title = 4;
  string content = 5;
  string picture = 6;
  repeated int32 item = 7;
}

message AreaItem {
  int32 id = 1;
  string name = 2;
  int32 icon = 3;
  repeated int32 type = 4;
  repeated int32 marker = 5;
}

message Area {
  string name = 1;
  repeated Area children = 2;
  repeated int32 item = 3;
  string map_id = 4;
}

message MapInfo {
  string id = 1;
  int32 origin_x = 2;
  int32 origin_y = 3;
  int32 width = 4;
  int32 height = 5;
  int32 tile_offset_x = 6;
  int32 tile_offset_y = 7;
}

message MapData {
  repeated Area area = 1;
  map<int32, AreaItem> item = 3;
  map<int32, Marker> marker = 4;
  map<string, MapInfo> map_info = 5;
}
